--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.18.6",
     "next": "^12.0.10",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
