redux-saga user post 생성, eslint 점검

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,12 @@
 {
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "esmaVersion": 2020,
     "sourceType": "module",
     "esmaFeatures": {
       "jsx": true
-    }
+    },
+    "requireConfigFile": false
   },
   "env": {
     "browser": true,
@@ -12,8 +14,7 @@
     "es6": true
   },
   "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended"
+    "airbnb"
   ],
   "plugins": [
     "import",
