--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "license": "MIT",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@babel/core": "^7.17.4",
+    "@babel/eslint-parser": "^7.17.0",
     "antd": "^4.18.6",
+    "axios": "^0.26.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "global": "^4.4.0",
     "next": "^12.0.10",
     "next-redux-wrapper": "^7.0.5",
     "prop-types": "^15.8.1",
@@ -19,11 +24,13 @@
     "react-slick": "^0.28.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0"
   }
