--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,10 @@
     "esmaFeatures": {
       "jsx": true
     },
-    "requireConfigFile": false
+    "requireConfigFile": false,
+    "babelOptions": {
+      "presets": ["@babel/preset-react"]
+    }
   },
   "env": {
     "browser": true,
