--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.16.7",
     "eslint": "^8.9.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
