--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^4.18.6",
     "axios": "^0.26.0",
     "eslint-config-airbnb": "^19.0.4",
+    "faker": "^6.6.6",
     "global": "^4.4.0",
     "next": "^12.0.10",
     "next-redux-wrapper": "^7.0.5",
@@ -25,6 +26,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
+    "shortid": "^2.2.16",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
