--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@ant-design/icons": "^4.7.0",
     "@babel/core": "^7.17.4",
     "@babel/eslint-parser": "^7.17.0",
+    "@faker-js/faker": "^6.0.0-alpha.7",
     "antd": "^4.18.6",
     "axios": "^0.26.0",
     "eslint-config-airbnb": "^19.0.4",
-    "faker": "^6.6.6",
     "global": "^4.4.0",
+    "immer": "^9.0.12",
     "next": "^12.0.10",
     "next-redux-wrapper": "^7.0.5",
     "prop-types": "^15.8.1",
